# conan_question

./: .gitignore  README.md  run_conan.sh
package1/: CMakeLists.txt  conanfile.py  package1-config.cmake
package1/include/package1/: tool.h
package1/testpackage/: CMakeLists.txt  conanfile.py  main.cpp
package2/: CMakeLists.txt  conanfile.py  package2-config.cmake
package2/include/package2/: tool.h
package2/testpackage/: CMakeLists.txt  conanfile.py  main.cpp
